2018-05-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* implement range checks on whole number multiply.
	* gm2/gm2-compiler/M2GenGCC.mod:  import BuildMultCheck.
          Call CodeMultCheck in quadruple case statement.
          (CodeMultChecked)  New procedure.  (CodeMultCheck)
          New procedure.
	* gm2/gm2-gcc/m2expr.c:  (checkWholeNegateOverflow)
          interm checkin.  (checkWholeSubOverflow) corrected
          comment.  (m2expr_Build3LogicalAnd)  New function.
          (m2expr_Build4LogicalOr)  New function.
          (checkWholeMultOverflow)  New function.
          (checkWholeOverflow)  New function.
          (m2expr_BuildMultCheck)  New function.
	* gm2/gm2-gcc/m2expr.def:  BuildMultCheck exported.
	* gm2/gm2-gcc/m2expr.h:  BuildMultCheck defined.
	* gm2/gm2-gcc/m2expr.c:  added missing semicolon.

2018-04-16      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  changed the plugin directory to
          plugin rather than gm2/plugin.  Corrected .so typeos.
	* gm2/gm2.texi:  Semantic checking (New section).
	* testsuite/gm2/iso/analysis/fail/gm2.exp:  New file.

2018-04-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  build plugin/m2rte.so and create
	  gm2/plugin directory.
	* gm2/gm2-compiler/CLexBuf.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2ALU.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2AsmUtil.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2BasicBlock.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2BasicBlock.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2Batch.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2Const.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2Const.mod:  removed FORWARD prototype
	  definitions.
	* gm2/gm2-compiler/M2Depth.mod:  removed FORWARD prototype
	  definitions.